<resources>
    <string name="app_name">DecocioApp</string>
    <string name="phone_number_email">Phone number, username or email</string>
    <string name="password">Password</string>
    <string name="Log_in">Log in</string>
    <string name="continue_with_google">Continue With Google</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="phone_number_username">Phone number or username</string>
    <string name="cat_menu_name">Category</string>
    <string name="detail_cat_menu">Detail</string>
    <string name="lihat">lihat</string>
    <string name="subcate_name">SubCate</string>
    <string name="detail_subcate_cust">Detail</string>
    <string name="item_name_detail_subcate_cust">Tenda1</string>
    <string name="item_detail_subcate_cust">detail</string>
    <string name="lokasi_item_subcate_cust">Bogor</string>
    <string name="desc_item">Jenis tenda ini sangat cocok untuk kondisi ekstrim misalnya berangin dan hujan. Tenda ini didukung oleh tiang-tiang kokoh yang mengelilinginya termasuk di bagian tengahnya. Biasanya perusahaan yang menyewakannya yang akan memasang langsung tenda tersebut. Tenda ini tergolong tenda high-class sehingga harus dipertimbangkan dulu budgetnya sebelum dipilih.</string>
    <string name="cust_name">Username</string>
    <string name="to_continue">TO CONTINUE</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="Username">Username</string>
    <string name="history_cust">History</string>
    <string name="book_cust">Bookmark</string>
    <string name="wish_cust">Wishlist</string>
    <string name="as_cust_or_prov">Sebagai Customer atau Provider</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wedding">Wedding</string>
    <string name="party">Party</string>
    <string name="detail_cat_wedding">Detail</string>
    <string name="detail_cat_party">Detail</string>
    <string name="cat_menu_camp">Camp</string>
    <string name="detail_cat_camp">Detail</string>
    <string name="cat_menu_graduate">Graduate</string>
    <string name="detail_cat_graduate">Detail</string>
    <string name="lokasi">Lokasi</string>
    <string name="item_name">Item Name</string>
    <string name="item_detail">Detail</string>
    <string name="florida_tent">Florida Tent</string>
    <string name="bogor">Bogor</string>
    <string name="fransisco_tent">Fransisco Tent</string>
    <string name="jakarta">Jakarta</string>
    <string name="america_tent">American Tent</string>
    <string name="tangerang">Tangerang</string>
    <string name="toronto_tent">Toronto Tent</string>
    <string name="bsd">BSD City</string>
    <string name="callifornia_tent">Callifornia Tent</string>
    <string name="batam">Batam</string>
    <string name="lavender_tent">Lavender Tent</string>
    <string name="bali">Bali</string>
    <string name="lily_tent">Lily Tent</string>
    <string name="surabaya">Surabaya</string>
    <string name="desert_tent">Desert Tent</string>
    <string name="yogyakarta">Yogyakarta</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_here">Type here . . .</string>
    <string name="bantuan">Perlu Bantuan?</string>
    <string name="ketik_disini">Ketik Disini Untuk Lanjut</string>
    >


</resources>
