<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Masuk.RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/darkred">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:gravity="center"
        android:textSize="50dp"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/to_continue"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/colorblack"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/edit_text"
        android:hint="@string/Username"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/et_pass_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:hint="@string/password"
        android:inputType="textPassword" />
    <EditText
        android:id="@+id/et_email_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/et_sebagai"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20"
        android:background="@drawable/edit_text"
        android:hint="@string/as_cust_or_prov"
        android:inputType="text"/>
    <Button
        android:id="@+id/btn_reg"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_16"
        android:background="@drawable/edit_text"
        android:text="@string/register"
        android:textColor="@color/colorPrimaryDark"/>


</LinearLayout>