<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bantuan"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ketik_disini"
        android:textSize="25dp"
        android:textColor="@color/colorPrimaryDark"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edit_profile"
            android:hint="@string/type_here"/>
    </LinearLayout>

</LinearLayout>