<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="750dp"
    tools:context=".Customer.Wedding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/padding_8"
            android:layout_marginTop="@dimen/padding_4"
            android:layout_marginRight="@dimen/padding_8"
            android:layout_marginBottom="@dimen/padding_4"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/search_home"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="@dimen/padding_8"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="301dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.SearchView
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:background="@drawable/edit_search" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/help_grad"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/padding_8"
                    android:layout_marginRight="@dimen/padding_8"
                    android:src="@drawable/ic_help_outline_darked_35dp" />

                <ImageButton
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@drawable/ic_email_darked_35dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/padding_10">
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/florida_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/bogor"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/fransisco_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/jakarta"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/padding_10">
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate3"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/america_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/tangerang"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate4"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/toronto_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/bsd"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/padding_10">
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate5"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/callifornia_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/batam"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate6"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/lavender_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/bali"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/padding_10">
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate7"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/lily_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/surabaya"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="190dp"
                    android:layout_height="225dp"
                    android:orientation="vertical"
                    android:layout_marginRight="@dimen/padding_8"
                    android:background="@android:color/white">
                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="150dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/padding_8"
                        android:layout_marginLeft="@dimen/padding_8"
                        android:layout_marginRight="@dimen/padding_8"
                        android:background="@drawable/graduate8"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:layout_marginTop="@dimen/padding_8"
                        android:text="@string/desert_tent"
                        android:textStyle="bold"
                        android:textSize="@dimen/title_size_16"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_10"
                        android:text="@string/yogyakarta"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>