<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg"
    tools:context=".Customer.ProfileCust">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/padding_8"
        android:layout_marginTop="@dimen/padding_4"
        android:layout_marginRight="@dimen/padding_8"
        android:orientation="horizontal">
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_help_outline_darked_35dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/padding_8"
            android:layout_marginLeft="@dimen/padding_8"/>
        <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/ic_email_darked_35dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/padding_8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:background="@drawable/edit_profile"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_32">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="125dp"
            android:layout_height="120dp"
            android:src="@color/colorAccent"
            android:layout_gravity="center"
            android:layout_margin="@dimen/padding_32" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_size_32"
            android:text="@string/cust_name"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/title_size_20"
            android:text="@string/lokasi_item_subcate_cust"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_32"
        android:layout_gravity="center"
        android:background="@drawable/edit_profile">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:gravity="center"
            android:textSize="@dimen/title_size_20"
            android:text="@string/history_cust"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="45dp"
            android:gravity="center"
            android:textSize="@dimen/title_size_20"
            android:text="@string/wish_cust"
            android:textStyle="normal"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_8"
        android:layout_gravity="center"
        android:background="@drawable/edit_profile">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/edit_profile"
            android:padding="@dimen/padding_8">
            <ImageView
                android:id="@+id/img_item"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="@dimen/padding_4"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent"/>
            <TextView
                android:id="@+id/tv_name_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/padding_16"
                android:layout_marginRight="@dimen/padding_16"
                android:layout_marginBottom="@dimen/padding_8"
                android:layout_toEndOf="@id/img_item"
                android:textSize="@dimen/title_size_16"
                android:textStyle="bold"
                android:text="@string/item_name_detail_subcate_cust"/>
            <TextView
                android:id="@+id/tv_detail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_name_card"
                android:layout_marginLeft="@dimen/padding_16"
                android:layout_marginRight="@dimen/padding_16"
                android:layout_toEndOf="@id/img_item"
                android:ellipsize="end"
                android:maxLines="5"
                android:text="@string/item_detail_subcate_cust" />
        </RelativeLayout>
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_alignParentBottom="true"-->
<!--            android:layout_marginStart="@dimen/padding_16"-->
<!--            android:layout_marginLeft="@dimen/padding_16"-->
<!--            android:layout_toEndOf="@id/img_item"-->
<!--            android:layout_toRightOf="@id/img_item"-->
<!--            android:orientation="horizontal">-->
<!--            <ImageButton-->
<!--                android:layout_width="35dp"-->
<!--                android:layout_height="35dp"/>-->
<!--        </LinearLayout>-->
    </ScrollView>
</LinearLayout>